--- a/src/main/resources/templates/profile.html
+++ b/src/main/resources/templates/profile.html
@@ -66,7 +66,7 @@
                                                 </tr>
                                                 </thead>
                                                 <!--       <tbody>
-                                                   <tr th:each="booking : ${user.roomBookings}">
+                                                   <tr th:each="booking : ${bookings}">
                                                          <td th:text="${booking.roomName}"></td>
                                                          <td th:text="${booking.checkInDate}"></td>
                                                          <td th:text="${booking.checkOutDate}"></td>
