--- a/src/main/resources/templates/room-booking-summary.html
+++ b/src/main/resources/templates/room-booking-summary.html
@@ -34,59 +34,42 @@
                 <div class="container">
                     <div class="card">
                         <div class="card-body">
-                            <h2 class="card-title mb-4">Room Booking </h2>
-                            <form action="/payment-receipt" method="get" id="bookingForm">
-                              <!--  <table class="table-border">
-                                    <tr>
-                                        <th> Selected Room type:</th>
-                                        <th th:text="${roomType}"></th>
-                                    </tr>
-                                    <tr>
-                                        <th> Number of guests:</th>
-                                        <th th:text="${guests}"> </th>
-                                    </tr>
-                                    <tr>
-                                        <th> Check-in time</th>
-                                        <th th:text="${checkIn}"> </th>
-                                    </tr>
-                                    <tr>
-                                        <th> check-out time</th>
-                                        <th th:text="${checkOut}"> </th>
-                                    </tr>
-                                </table>
-                                <button type="submit" class="btn btn-primary">Pay Now!!</button>
--->
-                                <div class="card-header">
-                                    <h2 class="text-center">Room Booking</h2>
+                            <div class="card-header">
+                                <h2 class="text-center">Room Booking</h2>
+                            </div>
+                            <div class="card-body">
+                                <div class="table-responsive">
+                                    <table class="table table-striped">
+                                        <thead>
+                                        <tr>
+                                            <th>Room Type</th>
+                                            <th>Number of Guests</th>
+                                            <th>Check-in Date</th>
+                                            <th>Check-out Date</th>
+                                            <th>Room count</th>
+                                            <th>Price per room</th>
+                                        </tr>
+                                        </thead>
+                                        <tbody>
+                                        <tr>
+                                            <td th:text="${room.name}"></td>
+                                            <td th:text="${guests}"></td>
+                                            <td th:text="${checkIn}"></td>
+                                            <td th:text="${checkOut}"></td>
+                                            <td th:text="${roomCount}"></td>
+                                            <td th:text="${room.dailyRent}"></td>
+                                        </tr>
+                                        </tbody>
+                                        <!--                                         <button> Proceed to payment</button>-->
+                                        <a th:attr="href=|https://pages.razorpay.com/pl_NhrzF6tsnuItBO/view?amount='${totalAmount}'|">
+                                            <button>Proceed to payment</button>
+                                        </a>
+                                        <!--                                            <form><script src="https://checkout.razorpay.com/v1/payment-button.js"-->
+                                        <!--                                                          data-payment_button_id="pl_NiLPWJXQSycHxf"-->
+                                        <!--                                                          async> </script> </form>-->
+                                    </table>
                                 </div>
-                                <div class="card-body">
-                                    <div class="table-responsive">
-                                        <table class="table table-striped">
-                                            <thead>
-                                            <tr>
-                                                <th>Room Type</th>
-                                                <th>Number of Guests</th>
-                                                <th>Check-in Date</th>
-                                                <th>Check-out Date</th>
-                                                <th>Room count</th>
-                                                <th>Price per room</th>
-                                            </tr>
-                                            </thead>
-                                                 <tbody>
-                                               <tr>
-                                                   <td th:text="${room.name}"></td>
-                                                     <td th:text="${guests}"></td>
-                                                     <td th:text="${checkIn}"></td>
-                                                     <td th:text="${checkOut}"></td>
-                                                     <td th:text="${roomCount}"></td>
-                                                     <td th:text="${room.dailyRent}"></td>
-                                                 </tr>
-                                            </tbody>
-                                            <button> Proceed to payment</button>
-                                        </table>
-                                    </div>
-                                </div>
-                            </form>
+                            </div>
                     </div>
                 </div>
             </div>
