--- a/src/main/resources/templates/room-availability.html
+++ b/src/main/resources/templates/room-availability.html
@@ -88,7 +88,7 @@
                                     <td th:text="${roomType.name}"></td>
                                     <td th:text="${roomType.description}"></td>
                                     <td>
-                                        <img th:attr="src=|data:image/jpeg;base64,${roomType.photoString}|" >
+                                        <img th:attr="src=|data:image/jpeg;base64,${roomType.photoString}|" style="width: 250px; height: 150px;">
                                     </td>
                                     <td th:text="${roomType.roomCount}">
 <!--                                        <input type="number" class="quantity-input" value="1" min="1">-->
