--- a/src/main/resources/templates/profile.html
+++ b/src/main/resources/templates/profile.html
@@ -35,7 +35,7 @@
                                 <!-- Profile Card -->
                                 <div class="card profile-card">
                                     <div class="card-header">
-                                        <button class="btn btn-primary float-right">Edit</button>
+                                      <!--  <button class="btn btn-primary float-right">Edit</button>    -->
                                         <h2 class="text-center">User Profile</h2>
                                     </div>
                                     <div class="card-body">
